# code_skeleton

./: .env.example  .gitignore  AGENTS.md  AGENT_CORE.md  ARCHITECTURE.md  BELIEFS.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  STATUS.md  clean_machine.sh  convert_markitdown.sh  package.json  pyproject.toml  rendergit_llm_only.py  setup_code_agent.sh  tsconfig.json  update_them_all.sh
.claude/commands/: gsd_squash.md  gsd_status.md  mcp_clean.md  mcp_start.md  zen_check.md
.githooks/: pre-commit
.github/workflows/: verify.yml
docs/agents/: skill-guidance-durability-prompt.md
docs/human/: README.md  agent-harness-references.md  intuitive-flow-audit-prompt.md  legacy-repo-migration.md  reduce-repo-entropy.md  skill-self-improvement-audit.md
docs/plans/: refactor-intuitive-init-harness.md  refactor-intuitive-skill-core.md  refactor-local-skill-sync.md  refactor-readme-doc-assets.md  refactor-reduce-entropy-skill-surface.md  refactor-skill-guidance-durability.md  refactor-skill-self-improvement-lens.md
scripts/: convert-docs.sh  external-skill-sources.txt  keep_awake.sh  local-skill-manifest.txt  setup.sh  tmp-fix.sh  tmux-richer.sh  tmux-watchdog.sh  update.sh
scripts/dev/: agent-deck-richer.sh  install-git-hooks.sh  pre-commit.sh  tmux-richer.sh  tmux-watchdog.sh  tmux-watchdog.test.ts
scripts/lib/: build-intuitive-skills.test.ts  build-intuitive-skills.ts  check-skills.test.ts  check-skills.ts  codex-native-package.sh  codex-skill-adapter.sh  ensure-agent-deck-config.test.ts  ensure-agent-deck-config.ts  ensure-claude-hooks.ts  (+15 more)
tasks/: lessons.md
(+69 files in other folders)
