[project]
name = "code-skeleton"
version = "0.1.0"
description = "Code skeleton demos for AI-assisted development with NVIDIA Isaac Sim"
requires-python = ">=3.12"
dependencies = [
    "rendergit",
    "markitdown",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["code_skeleton"]
